--- a/src/tests/unit-tests/dune
+++ b/src/tests/unit-tests/dune
@@ -3,6 +3,6 @@
  (names graph_test format_play_ground lexer_comment ocaml_codegen_test
    parse_enum pbtt_compile_p2 test_typing verify_syntax_invariants
    parse_message parse_field_options parse_file_options parse_import
-   pbtt_compile_p1 backend_ocaml_test pbrt_array wrapper_encoding varint)
+   pbtt_compile_p1 backend_ocaml_test)
  (libraries pbrt ocaml-protoc.compiler-lib)
  (flags :standard -open Ocaml_protoc_compiler_lib))
