--- a/pbrt_services.opam
+++ b/pbrt_services.opam
@@ -12,9 +12,9 @@ depends: [
   "dune" {>= "2.0"}
   "ocaml" {>= "4.08"}
   "pbrt" {= version}
-  "ocaml-protoc" {= version & with-test}
   "pbrt_yojson" {= version}
 ]
+dev-repo: "git+https://github.com/mransan/ocaml-protoc.git"
 build: [
   ["dune" "subst"] {pinned}
   [
@@ -25,8 +25,7 @@ build: [
     "-j"
     jobs
     "@install"
-    "@runtest" {with-test}
+    # "@runtest" {with-test} # no tests
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/mransan/ocaml-protoc.git"
