--- a/src/tests/yojson/dune
+++ b/src/tests/yojson/dune
@@ -6,8 +6,8 @@
 (rule
  (targets yojson_unittest.ml yojson_unittest.mli)
  (deps
-  (:file yojson_unittest.proto) (:json yojson.data))
+  (:file yojson_unittest.proto)
+  (:json yojson.data))
  (action
   (run %{project_root}/src/ocaml-protoc/ocaml_protoc.exe %{file} --yojson
     --dump_type_repr --pp --ml_out=.)))
-
