--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,29 @@ jobs:
     - run: opam install -t . --deps-only
     - run: opam exec -- dune build @install
     - run: opam exec -- dune runtest
-      #- run: opam exec -- make integration
+
+    - name: tests
+      run: make all-tests
+
+  format:
+    name: format
+    strategy:
+        os:
+          - ubuntu-latest
+            #- macos-latest
+            #- windows-latest
+        ocaml-compiler:
+          - '5.03'
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ocaml/setup-ocaml@v3
+      with:
+        ocaml-compiler: ${{ matrix.ocaml-compiler }}
+        allow-prerelease-opam: true
+        dune-cache: true
+          #- run: sudo apt install protobuf-compiler libprotobuf-dev
+    - run: opam pin -n .
+    - run: opam depext -yt ocaml-protoc
     - run: opam install ocamlformat.0.27.0
-    - run: opam exec -- dune build @fmt --auto-promote
-    - run: git diff -q
+    - run: opam exec -- dune build @fmt
