--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,19 +40,12 @@ jobs:
 
   format:
     name: format
-    strategy:
-        os:
-          - ubuntu-latest
-            #- macos-latest
-            #- windows-latest
-        ocaml-compiler:
-          - '5.03'
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: ocaml/setup-ocaml@v3
       with:
-        ocaml-compiler: ${{ matrix.ocaml-compiler }}
+        ocaml-compiler: '5.03'
         allow-prerelease-opam: true
         dune-cache: true
           #- run: sudo apt install protobuf-compiler libprotobuf-dev
