--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         ocaml-compiler: ${{ matrix.ocaml-compiler }}
         allow-prerelease-opam: true
         dune-cache: true
-          #- run: sudo apt install protobuf-compiler libprotobuf-dev
+    - run: sudo apt install protobuf-compiler libprotobuf-dev
     - run: opam pin -n .
     - run: opam depext -yt ocaml-protoc
     - run: opam install -t . --deps-only
