--- a/Makefile.test
+++ b/Makefile.test
@@ -47,9 +47,9 @@ $(OCAMLOPTIONS_HINC)/ocamloptions.pb.cc: $(OCAMLOPTIONS_HINC)/ocamloptions.proto
 %_cpp.tsk: %_cpp.cpp %.pb.cc $(OCAMLOPTIONS_HINC)/ocamloptions.pb.cc
 	$(CXX) $(CPPFLAGS) $(LDFLAGS) \
 		-I ./ -I $(INTEGRATION_TESTS_DIR) -I $(OCAMLOPTIONS_HINC) -I $(PB_HINC) \
-		-L $(PB_LINC) -l protobuf \
+		-L $(PB_LINC) \
 		$? \
-		-o $@
+		-o $@ -l protobuf
 
 $(INTEGRATION_TESTS_DIR)/test10_cpp.tsk: \
 	$(INTEGRATION_TESTS_DIR)/test10_cpp.cpp \
@@ -57,9 +57,9 @@ $(INTEGRATION_TESTS_DIR)/test10_cpp.tsk: \
 	$(INTEGRATION_TESTS_DIR)/test09.pb.cc
 	$(CXX) $(CPPFLAGS) $(LDFLAGS) \
 		-I ./ -I $(INTEGRATION_TESTS_DIR)  -I $(PB_HINC) \
-		-L $(PB_LINC) -l protobuf \
+		-L $(PB_LINC) \
 		$? \
-		-o $@
+		-o $@ -l protobuf
 
 .SECONDARY:
 
@@ -100,8 +100,7 @@ build-test-data-yojson:
 		-I ./ -I $(INTEGRATION_TESTS_DIR) -I $(OCAMLOPTIONS_HINC) -I $(PB_HINC) \
 		$(YOJSON_DIR)/yojson_unittest_cpp.cpp $(YOJSON_DIR)/yojson_unittest.pb.cc \
 		-L $(PB_LINC) \
-		-l protobuf \
-		-o $(YOJSON_DIR)/yojson.exe
+		-o $(YOJSON_DIR)/yojson.exe -l protobuf
 	cd $(YOJSON_DIR) && ./yojson.exe
 
 YOJSON_DIR=src/tests/yojson
