--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     - run: opam exec -- dune build @install
 
     - name: tests
-      run: opam exec -- make all-tests
+      run: opam exec -- make all-tests PB_LINC=/usr/lib/x86_64-linux-gnu/
 
   format:
     name: format
