--- a/ocaml-protoc.opam
+++ b/ocaml-protoc.opam
@@ -14,6 +14,7 @@ depends: [
   "pbrt" {= version}
   "pbrt_yojson" {= version & with-test}
   "pbrt_services" {= version & with-test}
+  "ppx_deriving" {with-test}
   "ocaml" {>= "4.08"}
 ]
 build: [
