--- a/src/tests/integration-tests/dune
+++ b/src/tests/integration-tests/dune
@@ -347,6 +347,7 @@
 (executable
  (name perfetto_trace_ml)
  (modules perfetto_trace_ml perfetto_trace)
+ (flags :standard \ -bin-annot -annot)
  (libraries test_util unix))
 
 (rule
