--- a/src/dune
+++ b/src/dune
@@ -1,3 +1,3 @@
 (env
  (_
-  (flags :standard -warn-error -a+8 -w +a-4-40-41-42-44-48-70)))
+  (flags :standard -warn-error -a+8 -w +a-4-30-40-41-42-44-48-70)))
