--- a/src/compilerlib/dune
+++ b/src/compilerlib/dune
@@ -19,4 +19,4 @@
    pb_parsing_util pb_typing_graph pb_typing pb_typing_recursion
    pb_typing_resolution pb_typing_type_tree pb_typing_util
    pb_typing_validation pb_util pb_format_util pb_codegen_mode)
- (libraries stdlib-shims pbrt))
+ (libraries stdlib-shims pbrt pbrt.options))
