--- a/src/tests/expectation/dune
+++ b/src/tests/expectation/dune
@@ -13,17 +13,15 @@
  (flags :standard -open Ocaml_protoc_compiler_lib))
 
 (test
- (name it_compiles)
- (modules It_compiles Option_processing validate)
- (libraries pbrt ocaml-protoc.rt-pb-options ocaml-protoc.compiler-lib)
- (package ocaml-protoc)
- (flags :standard -open Ocaml_protoc_compiler_lib))
+ (name option_processing_compiles)
+ (modules Option_processing_compiles Option_processing)
+ (libraries pbrt ocaml-protoc.compiler-lib)
+ (package ocaml-protoc))
 
 (test
  (name test_decode_pb_options)
- (libraries pbrt ocaml-protoc.compiler-lib ocaml-protoc.rt-pb-options)
+ (libraries pbrt pbrt.options ocaml-protoc.compiler-lib)
  (package ocaml-protoc)
- (flags :standard -open Ocaml_protoc_compiler_lib)
  (modules Test_decode_pb_options Validate))
 
 (rule
