--- a/pbrt_yojson.opam
+++ b/pbrt_yojson.opam
@@ -18,7 +18,7 @@ depends: [
 ]
 dev-repo: "git+https://github.com/mransan/ocaml-protoc.git"
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   [
     "dune"
     "build"
@@ -31,3 +31,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
+x-maintenance-intent: ["(latest)"]
